<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--    <SwitchPreference
          android:key="example_switch"
          android:title="@string/pref_title_social_recommendations"
          android:summary="@string/pref_description_social_recommendations"
          android:defaultValue="true" />
  -->
      <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_title_location"
        android:defaultValue="@string/pref_location_default"
        android:selectAllOnFocus="true"
        android:inputType="text"
        android:capitalize="words"
        android:singleLine="true"
        android:maxLines="1" />

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:title="@string/pref_temperature_units_title"
        android:key="@string/pref_temperature_units_key"
        android:defaultValue="@string/pref_units_metric"
        android:entryValues="@array/pref_temperature_unit_values"
        android:entries="@array/pref_temperature_units"
        />
</PreferenceScreen>
